data/derived/comb/progs/unify/prog2290.ml.out
Characters 14-27:
  let _ = build(makeRand(2,3), 2);;
                ^^^^^^^^^^^^^
Error: This expression has type int * int -> int
       but an expression was expected of type int
